--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
   <body>
     <h1>Planet Fatness</h1>
     <p>
@@ -41,31 +42,34 @@
     </p>
     <ul>
       <li>
-        <a href="https://goo.gl/maps/qBnEfK5AingPLZgb9" target="_blank">
-          <img
-            src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B031.jpg"
-            alt="PF Power Zone. A modern gym equipped with treadmills."
-            width="320"
-          />
-        </a>
+        <img
+          src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B031.jpg"
+          alt="PF Power Zone. A modern gym equipped with treadmills."
+          width="320"
+        />
+        <a href="https://goo.gl/maps/qBnEfK5AingPLZgb9" target="_blank"
+          >Open in Google Maps</a
+        >
       </li>
       <li>
-        <a href="https://goo.gl/maps/WZ4K6XMvHU7FkgWB7" target="_blank">
-          <img
-            src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B032.jpg"
-            alt="PF Fit and Fast. A gym with indoor bikes behind a glass door."
-            width="320"
-          />
-        </a>
+        <img
+          src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B032.jpg"
+          alt="PF Fit and Fast. A gym with indoor bikes behind a glass door."
+          width="320"
+        />
+        <a href="https://goo.gl/maps/WZ4K6XMvHU7FkgWB7" target="_blank"
+          >Open in Google Maps</a
+        >
       </li>
       <li>
+        <img
+          src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B033.jpg"
+          alt="PF Body Sculpting. A studio з fitness balls and trx straps."
+          width="320"
+        />
         <a href="https://goo.gl/maps/UZqkiUqS6eWL5DJd7" target="_blank">
-          <img
-            src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B033.jpg"
-            alt="PF Body Sculpting. A studio with fitness balls and trx straps."
-            width="320"
-          />
-        </a>
+          Open in Google Maps</a
+        >
       </li>
     </ul>
     <h2>Why choose Planet Fatness?</h2>
@@ -100,7 +104,7 @@
     </ol>
     <address>
       Call us:<a href="tel:+070174069900">+070174069900</a><br />
-      Email us:<a href="maito:fatnessescape@doit.com">fatnessescape@doit.com</a
+      Email us:<a href="mailto:fatnessescape@doit.com">fatnessescape@doit.com</a
       ><br />
       You may also want to visit us:<br />
       Lorem Foundation<br />
@@ -121,14 +125,14 @@
     </p>
     <ul>
       <li>
-          <a
-            href="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/Build-Muscles.pdf"
-            download="build-muscles-plan"
-            >Download «Build Muscles» training plan
-          </a>
+        <a
+          href="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/Build-Muscles.pdf"
+          download="build-muscles-plan"
+          >Download «Build Muscles» training plan
+        </a>
       </li>
       <li>
-        <a 
+        <a
           href="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/Burn-Fat.pdf"
           download="burn-fat-plan"
           >Download «Burn Fat» training plan
@@ -141,5 +145,6 @@
           >Download «Build Strength and Mass» training plan
         </a>
       </li>
+    </ul>
   </body>
 </html>
