--- a/index.html
+++ b/index.html
@@ -47,9 +47,16 @@
           alt="PF Power Zone. A modern gym equipped with treadmills."
           width="320"
         />
+        <h3>PF Power Zone</h3>
+        <p>
+          With full access membership you'll gain access to our state of the art
+          gym floor and become a part of a supportive fitness community. Feel
+          confident and strong, with equipment to challenge every level of
+          fitness.
+        </p>
         <a href="https://goo.gl/maps/qBnEfK5AingPLZgb9" target="_blank"
-          >Open in Google Maps</a
-        >
+          >Open in Google Maps
+        </a>
       </li>
       <li>
         <img
@@ -57,9 +64,15 @@
           alt="PF Fit and Fast. A gym with indoor bikes behind a glass door."
           width="320"
         />
+        <h3>PF Fit and Fast</h3>
+        <p>
+          Small group training combines the focused attention of a private
+          session with the energy of a group. With up to 5 people, the groups
+          have their own program, training area and equipment.
+        </p>
         <a href="https://goo.gl/maps/WZ4K6XMvHU7FkgWB7" target="_blank"
-          >Open in Google Maps</a
-        >
+          >Open in Google Maps
+        </a>
       </li>
       <li>
         <img
@@ -67,9 +80,15 @@
           alt="PF Body Sculpting. A studio з fitness balls and trx straps."
           width="320"
         />
+        <h3>PF Body Sculpting</h3>
+        <p>
+          Our 1 on 1 private training is the best choice for people looking for
+          a personalized program based on their goals. You will have your own
+          training room with one of our experienced fitness coaches.
+        </p>
         <a href="https://goo.gl/maps/UZqkiUqS6eWL5DJd7" target="_blank">
-          Open in Google Maps</a
-        >
+          Open in Google Maps
+        </a>
       </li>
     </ul>
     <h2>Why choose Planet Fatness?</h2>
