--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gym</title>
+    <meta
+      name="description"
+      name="Planet Fatness description meta tag content"
+    />
+    <title>Planet Fatness is the place for beginners and pros!</title>
   </head>
 
   <body>
