--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      name="Planet Fatness description meta tag content"
+      content="Planet Fatness description meta tag content"
     />
     <title>Planet Fatness is the place for beginners and pros!</title>
   </head>
