--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="Planet Fatness description meta tag content"
     />
     <title>Planet Fatness is the place for beginners and pros!</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -20,10 +21,10 @@
         />
       </a>
       <nav>
-        <ul>
-          <li><a href="#clubs">Our Clubs</a></li>
-          <li><a href="#benefits">PF Benefits</a></li>
-          <li><a href="#programs">Tips and Programs</a></li>
+        <ul class="page-nav">
+          <li><a href="#clubs" class="link">Our Clubs</a></li>
+          <li><a href="#benefits" class="link">PF Benefits</a></li>
+          <li><a href="#programs" class="link">Tips and Programs</a></li>
         </ul>
       </nav>
     </header>
@@ -61,7 +62,7 @@
           offers smoothies. soups, salads, and other healthy snacks prepared
           fresh daily. See where we're currently operating.
         </p>
-        <ul>
+        <ul class="club-list">
           <li>
             <img
               src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/B031.jpg"
@@ -75,7 +76,10 @@
               Feel confident and strong, with equipment to challenge every level
               of fitness.
             </p>
-            <a href="https://goo.gl/maps/qBnEfK5AingPLZgb9" target="_blank"
+            <a
+              class="link"
+              href="https://goo.gl/maps/qBnEfK5AingPLZgb9"
+              target="_blank"
               >Open in Google Maps
             </a>
           </li>
@@ -91,7 +95,10 @@
               session with the energy of a group. With up to 5 people, the
               groups have their own program, training area and equipment.
             </p>
-            <a href="https://goo.gl/maps/WZ4K6XMvHU7FkgWB7" target="_blank"
+            <a
+              class="link"
+              href="https://goo.gl/maps/WZ4K6XMvHU7FkgWB7"
+              target="_blank"
               >Open in Google Maps
             </a>
           </li>
@@ -108,7 +115,11 @@
               your own training room with one of our experienced fitness
               coaches.
             </p>
-            <a href="https://goo.gl/maps/UZqkiUqS6eWL5DJd7" target="_blank">
+            <a
+              class="link"
+              href="https://goo.gl/maps/UZqkiUqS6eWL5DJd7"
+              target="_blank"
+            >
               Open in Google Maps
             </a>
           </li>
@@ -198,9 +209,10 @@
       </section>
     </main>
     <footer>
-      <ul>
+      <ul class="social-link">
         <li>
-          <a href="https://www.instagram.com/" target="_blank">
+          <a class="link" href="https://www.instagram.com/" target="_blank"
+            >Instagram
             <img
               src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/b04insta.svg"
               alt="Instagram"
@@ -210,7 +222,8 @@
           </a>
         </li>
         <li>
-          <a href="https://www.facebook.com/" target="_blank">
+          <a class="link" href="https://www.facebook.com/" target="_blank"
+            >Facebook
             <img
               src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/b04facebook.svg"
               alt="Facebook"
@@ -220,7 +233,8 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/" target="_blank">
+          <a class="link" href="https://www.youtube.com/" target="_blank"
+            >YouTube
             <img
               src="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/b04youtube.svg"
               alt="YouTube"
