--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
       content="Planet Fatness description meta tag content"
     />
     <title>Planet Fatness is the place for beginners and pros!</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -29,7 +37,7 @@
       </nav>
     </header>
     <main>
-      <h1>Planet Fatness</h1>
+      <h1 class="page-title">Planet Fatness</h1>
       <p>
         Healthy food is delicious. Doing sport is enjoyable. You just need to
         start - people said. Nonsense! - I thought. To me, a 19-year-old guy,
@@ -51,7 +59,7 @@
         you and help on your way.
       </p>
       <section>
-        <h2 id="clubs">Find us near you</h2>
+        <h2 class="section-title" id="clubs">Find us near you</h2>
         <p>
           Get healthy, feel strong, and be happy! With 50+ classes on the menu,
           including HIIT classes, group fitness, and Personal Training, we have
@@ -69,7 +77,7 @@
               alt="PF Power Zone. A modern gym equipped with treadmills."
               width="320"
             />
-            <h3>PF Power Zone</h3>
+            <h3 class="title">PF Power Zone</h3>
             <p>
               With full access membership you'll gain access to our state of the
               art gym floor and become a part of a supportive fitness community.
@@ -89,7 +97,7 @@
               alt="PF Fit and Fast. A gym with indoor bikes behind a glass door."
               width="320"
             />
-            <h3>PF Fit and Fast</h3>
+            <h3 class="title">PF Fit and Fast</h3>
             <p>
               Small group training combines the focused attention of a private
               session with the energy of a group. With up to 5 people, the
@@ -108,7 +116,7 @@
               alt="PF Body Sculpting. A studio з fitness balls and trx straps."
               width="320"
             />
-            <h3>PF Body Sculpting</h3>
+            <h3 class="title">PF Body Sculpting</h3>
             <p>
               Our 1 on 1 private training is the best choice for people looking
               for a personalized program based on their goals. You will have
@@ -126,7 +134,7 @@
         </ul>
       </section>
       <section>
-        <h2 id="benefits">Why choose Planet Fatness?</h2>
+        <h2 class="section-title" id="benefits">Why choose Planet Fatness?</h2>
         <p>
           We're bringing accessible, on-trend fitness to everyone! We are more
           than just a gym - we are a community. We are the crew to help you
@@ -170,7 +178,7 @@
         <button type="button">Request a callback</button>
       </section>
       <section>
-        <h2 id="programs">
+        <h2 class="section-title" id="programs">
           How to stop doubting and start exercising regularly
         </h2>
         <p>
