--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="<https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css>"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -60,7 +65,7 @@
       </p>
       <section>
         <h2 class="section-title" id="clubs">Find us near you</h2>
-        <p>
+        <p class="section-text">
           Get healthy, feel strong, and be happy! With 50+ classes on the menu,
           including HIIT classes, group fitness, and Personal Training, we have
           something for every taste. All the gyms and fitness studios in our
@@ -135,7 +140,7 @@
       </section>
       <section>
         <h2 class="section-title" id="benefits">Why choose Planet Fatness?</h2>
-        <p>
+        <p class="section-text">
           We're bringing accessible, on-trend fitness to everyone! We are more
           than just a gym - we are a community. We are the crew to help you
           reach the goals.
@@ -181,7 +186,7 @@
         <h2 class="section-title" id="programs">
           How to stop doubting and start exercising regularly
         </h2>
-        <p>
+        <p class="section-text">
           Thousands of people dream about having a nice body. They start doing
           sport, face challenges and quit it in a few weeks or even days. Why
           does it happen? The problem is that people often do too much physical
@@ -191,7 +196,7 @@
           and focus on developing a habit of doing sport regularly. So, we offer
           you a few training programs for beginners.
         </p>
-        <ul>
+        <ul class="downloads">
           <li>
             <a
               href="https://ac.goit.global/fullstack/html-css-v2/module-1/autocheck/Build-Muscles.pdf"
